# opengl_practice

./: .gitignore  CMakeLists.txt  README.md  main.cpp
3rds/assimp/include/assimp/: revision.h
3rds/glad/include/glad/: glad.h
3rds/glad/src/: glad.c
3rds/glm/: readme.md
3rds/glm/test/gtc/: gtc_type_aligned.cpp
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
elements/: backpack.cpp  backpack.h  cube.cpp  cube.h  cube_texture.cpp  cube_texture.h  element.h  green_sea_turtle.cpp  green_sea_turtle.h  triangle.cpp  triangle.h
glsl/backpack/: backpack.fs
glsl/cube/: cube.fs  cube.vs
glsl/cube_texture/: cube_texture.fs  cube_texture.vs
glsl/sea_turtle/: sea_turtle.fs  sea_turtle.vs
glsl/triangle/: triangle.vs
utils/: file_utils.h
